--- a/BS Day 1/bootstrap-a1.html
+++ b/BS Day 1/bootstrap-a1.html
@@ -13,10 +13,8 @@
 
 	<div class="container">
 		<div class="row bg-danger">
-			<div class="col-lg-1 col-md-2 col-auto mr-auto bg-white border border-danger
-">col1</div>
-			<div class="col-lg-1 col-md-2 col-auto bg-white border border-danger
-">col2</div>
+			<div class="col-lg-1 col-md-2 col-auto mr-auto bg-white border border-danger mx-3">col1</div>
+			<div class="col-lg-1 col-md-2 col-auto bg-white border border-danger mx-3">col2</div>
 
 		</div>
 		<div class="row bg-warning">
